--- a/src/sass/partials/tickets.sass
+++ b/src/sass/partials/tickets.sass
@@ -2,10 +2,12 @@
   @media only screen and (min-width: 40.063em) and (max-width: 64em)
     padding: 0 0 0 55px !important
 
-.ticketList
+.ticketList,
+.accountList
   overflow: hidden
 
-div#ticketTable_wrapper
+div#ticketTable_wrapper,
+div#accountsTable_wrapper
   margin-bottom: 0
 
 .ticket-status span
